<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#121212"
    tools:context=".Guess">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/bottomBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/andika"
                android:text="@string/solve_with_golden_ratio"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:layout_margin="8dp"
                android:textSize="17sp" />

            <androidx.gridlayout.widget.GridLayout
                android:layout_width="368dp"
                android:layout_height="368dp"
                app:columnCount="3"
                app:rowCount="3">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="10dp"
                    android:tag="0"
                    app:layout_column="0"
                    app:layout_row="0"
                    android:src="@drawable/six"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_1"
                    style="@style/GridStyle"
                    app:layout_column="0"
                    app:layout_row="0" />

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_margin="10dp"
                    android:layout_marginStart="8dp"
                    android:tag="1"
                    app:layout_column="1"
                    app:layout_row="0"
                    android:src="@drawable/three"/>

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    app:layout_column="1"
                    app:layout_row="0"
                    android:text="@string/_2"
                    style="@style/GridStyle"/>

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_margin="10dp"
                    android:layout_marginStart="10dp"
                    android:tag="2"
                    app:layout_column="2"
                    app:layout_row="0"
                    android:src="@drawable/seven"/>

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    app:layout_column="2"
                    app:layout_row="0"
                    android:text="@string/_3"
                    style="@style/GridStyle"/>

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_margin="15dp"
                    android:tag="3"
                    app:layout_column="0"
                    app:layout_row="1"
                    android:src="@drawable/nine"/>

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    app:layout_column="0"
                    app:layout_row="1"
                    android:text="@string/_4"
                    style="@style/GridStyle"/>

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="15dp"
                    android:tag="4"
                    app:layout_column="1"
                    app:layout_row="1"
                    android:src="@drawable/eight" />

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    app:layout_column="1"
                    app:layout_row="1"
                    android:text="@string/_5"
                    style="@style/GridStyle"/>

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="15dp"
                    android:tag="5"
                    app:layout_column="2"
                    app:layout_row="1"
                    android:src="@drawable/four"/>

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    app:layout_column="2"
                    app:layout_row="1"
                    android:text="@string/_6"
                    style="@style/GridStyle"/>

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"
                    android:tag="6"
                    app:layout_column="0"
                    app:layout_row="2"
                    android:src="@drawable/two"/>

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    app:layout_column="0"
                    app:layout_row="2"
                    android:text="@string/_7"
                    style="@style/GridStyle"/>

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="15dp"
                    android:tag="7"
                    app:layout_column="1"
                    app:layout_row="2"
                    android:src="@drawable/one"/>

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    app:layout_column="1"
                    app:layout_row="2"
                    android:text="@string/_8"
                    style="@style/GridStyle"/>

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="15dp"
                    android:tag="8"
                    app:layout_column="2"
                    app:layout_row="2"
                    android:src="@drawable/five"/>

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    app:layout_column="2"
                    app:layout_row="2"
                    android:text="@string/_9"
                    style="@style/GridStyle"/>


            </androidx.gridlayout.widget.GridLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:layout_marginTop="10dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/option1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/default_for_options"
                        android:layout_gravity="center"
                        style="@style/Options"
                        android:onClick="selected"
                        tools:text="Option 1" />

                    <TextView
                        android:id="@+id/option2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/default_for_options"
                        android:layout_gravity="center"
                        style="@style/Options"
                        android:onClick="selected"
                        tools:text="Option 2"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/option3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/default_for_options"
                        android:layout_gravity="center"
                        style="@style/Options"
                        android:onClick="selected"
                        tools:text="Option 3" />

                    <TextView
                        android:id="@+id/option4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/default_for_options"
                        android:layout_gravity="center"
                        style="@style/Options"
                        android:onClick="selected"
                        tools:text="Option 4" />

                </LinearLayout>

            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnCheck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="8dp"
                android:fontFamily="@font/amaranth"
                android:onClick="selected"
                android:text="@string/check"
                android:layout_margin="16dp"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="16sp"
                android:textStyle="bold"
                app:cornerRadius="8dp" />

        </LinearLayout>

    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomBar"
        style="@style/Widget.MaterialComponents.BottomAppBar.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:padding="8dp"
        app:itemBackground="@android:color/background_dark"
        app:itemIconTint="@drawable/selector"
        app:itemTextAppearanceActive="@font/roboto_slab_bold"
        app:itemTextAppearanceInactive="@font/roboto_slab"
        app:itemTextColor="@drawable/selector"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottombar" />

</androidx.constraintlayout.widget.ConstraintLayout>