<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#121212"
    tools:context=".MainActivity">


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="40dp"
        android:layout_marginTop="-40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="50dp"
        android:elevation="10dp"
        app:cardBackgroundColor="#000000"
        app:cardCornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="16dp">

            <LinearLayout
                android:id="@+id/headerText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp"
                android:gravity="center">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/italiana"
                    android:text="@string/golden"
                    android:textAlignment="center"
                    android:textColor="#FFDF00"
                    android:layout_marginEnd="5dp"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/italiana"
                    android:text="@string/ratio"
                    android:textAlignment="center"
                    android:textColor="#C0C0C0"
                    android:textSize="25sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <ImageView
                android:id="@+id/gdHead"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_margin="16dp"
                android:contentDescription="@string/golden_ratio_image"
                />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnStartTour"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:background="#121212"
                android:elevation="10dp"
                android:fontFamily="@font/roboto_slab"
                android:onClick="nextPage"
                android:text="@string/start_tour"
                android:textAlignment="center"
                android:textColor="#ffe78f"
                android:textSize="18sp"
                android:textStyle="bold"
                app:cornerRadius="8dp"
                app:icon="@drawable/ic_baseline_arrow_forward_24"
                app:iconGravity="textEnd"
                app:iconPadding="8dp"
                app:iconTint="#cdcdcd" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>