<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:elevation="16dp"
    tools:context=".MainPage">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#121212"
        android:clipToPadding="false"
        android:paddingBottom="58dp">

        <!--        Scrollable Content-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="20dp">

            <LinearLayout
                android:id="@+id/headerText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:padding="16dp"
                android:gravity="center">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/italiana"
                    android:text="@string/golden"
                    android:textAlignment="center"
                    android:textColor="#FFDF00"
                    android:layout_marginEnd="5dp"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/italiana"
                    android:text="@string/ratio"
                    android:textAlignment="center"
                    android:textColor="#C0C0C0"
                    android:textSize="25sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <ImageView
                android:layout_width="225dp"
                android:layout_height="300dp"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                app:srcCompat="@drawable/monalisa" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/roboto_slab"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/head_text_1"
                android:textColor="#FFFFFF"
                android:textSize="13sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/roboto_slab"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/head_text_2"
                android:textColor="#FFFFFF"
                android:textSize="13sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/roboto_slab"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/head_text_3"
                android:textColor="#FFFFFF"
                android:textSize="13sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="#FFFFFF" />


            <com.github.islamkhsh.CardSliderViewPager
                android:id="@+id/viewPager"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:requiresFadingEdge="vertical"
                app:auto_slide_time="3"
                app:cardSlider_indicator="@id/indicator"
                app:cardSlider_otherPagesWidth="24dp"
                app:cardSlider_pageMargin="12dp"
                app:cardSlider_smallAlphaFactor="0.5"
                app:cardSlider_smallScaleFactor="0.9" />

            <com.github.islamkhsh.CardSliderIndicator
                android:id="@+id/indicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="16dp"
                app:indicatorsToShow="5" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="#FFFFFF" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="vertical">


                <ImageView
                    android:id="@+id/info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_info_24"
                    android:layout_gravity="end"
                    android:layout_margin="8dp" />

                <ImageView
                    android:layout_width="300dp"
                    android:layout_height="300dp"
                    android:layout_gravity="center"
                    android:layout_margin="16dp"
                    app:srcCompat="@drawable/grid" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10dp"
                android:background="#FFFFFF" />


            <com.synnapps.carouselview.CarouselView
                android:id="@+id/carouselView"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_gravity="center"
                app:radius="3dp"
                app:strokeColor="#FF777777"
                app:strokeWidth="1dp"
                android:layout_marginTop="25dp"
                app:slideInterval="3000" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="20dp"
                android:background="#FFFFFF" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="16dp"
                android:fontFamily="@font/italiana"
                android:gravity="center"
                android:text="@string/a_minute_about_golden_ratio"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold" />

            <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:elevation="10dp"
                android:fontFamily="@font/amaranth"
                android:onClick="videoPage"
                android:padding="10dp"
                android:text="@string/take_a_look"
                android:textColor="#FFFFFF"
                android:textSize="15sp"
                android:textStyle="bold"
                app:cornerRadius="10dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="20dp"
                android:background="#FFFFFF" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5sp"
                android:fontFamily="@font/roboto_slab_bold"
                android:text="@string/creators"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="10sp"
                android:textStyle="bold" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:itemBackground="@android:color/background_dark"
        app:itemTextColor="@drawable/selector"
        app:itemIconTint="@drawable/selector"
        app:menu="@menu/bottombar"
        android:padding="8dp"
        app:itemTextAppearanceActive="@font/roboto_slab_bold"
        app:itemTextAppearanceInactive="@font/roboto_slab"
        android:layout_gravity="bottom"
        style="@style/Widget.MaterialComponents.BottomAppBar.Colored"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>